--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@ruby2js/snowpack-plugin": "0.0.1",
     "@rubys/snowpack-plugin-require-context": "0.0.3",
-    "stimulus": "^2.0.0",
-    "snowpack": "^3.0.11"
+    "resolve": "^1.20.0",
+    "snowpack": "^3.0.11",
+    "stimulus": "^2.0.0"
   }
 }
